# SEALD-EXE-04

./: .gitignore  README.md  pyproject.toml
src/seald_exe04/: __init__.py  aircraft_sim.py  atc_node.py  cat021_stub.py  cat240_seald.py  channel.py  crypto.py
src/seald_exe04.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_aircraft_cli.py  test_cat240.py  test_correlation.py  test_crypto.py  test_enc_dec_processing.py  test_key_rotation.py  test_protocol_compat.py  test_replay.py  test_segmentation.py  test_spoofing.py
